fix of vite config

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "homepage": "https://damerashirisha.github.io/candy-project1",
-  "name": "vite-project",
+  "name": "candy-project1",
   "private": true,
   "version": "0.0.0",
   "type": "module",
